--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,13 @@ venv/
 **__pycache__
 terraform.tfvars
 **secrets/
-.tfstate
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
