pakko tehdä kun git pakottaa

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ venv/
 **__pycache__
 terraform.tfvars
 **secrets/
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
